--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html><!--従うHTMLバージョンを宣言している-->
-<html><!-- HTMLで書かれていることを示す -->
+<html lang="jp"><!-- HTMLで書かれていることを示す -->
 <head><!-- HTML文書の情報を記載する -->
-
+<meta charset="UTF-8">
+<title>kadai</title>
+<link href="css/style.css" rel="stylesheet">
 </head>
 <body><!--表示させるコンテンツを記載する-->
+<!-- ロゴ -->
+<header>
+	<img src="img/ワンダーlogo.png" alt ="LITALICOワンダー">
+</header>
 
+<!-- ナビゲーション -->
+<nav>
+	<ul>
+		<li>LITALICOワンダーとは</li>
+		<li>コースガイド</li>
+		<li>体験授業について</li>
+	</ul>
+</nav>
+
+<!--アイキャッチ -->
+<div class="top-img">
+	<img src="img/eyecatch.png" alt="トップ画像">
+</div>
+
+<!-- 見出し -->
+<section class="intro">
+<h1>IT×ものづくり教室</h1>
+
+<!-- パラグラフ -->
+<p>
+	LITALICOワンダーは、テクノロジーを活かしたものづくりを通して、
+	<br>子どもの個性に合わせ、創造力を育む学びの場です。
+	<br>プログラミングやロボット製作、デジタルファブリケーションなど、
+	<br>子どもが好きなものに没頭することができます。
+</p>
+ <!--メニューボタン -->
+<ul>
+	<li>LITALICOワンダーとは</li>
+	<li>創造力を養う教育とは</li>
+</ul>
+</section>
 </body>
 </html>
