--- a/kadai3/index.html
+++ b/kadai3/index.html
@@ -18,6 +18,12 @@
 <body>
 
 	<!-- チャレンジ 3-1 ローディングアニメーションをつけよう -->
+	<div id ="loading">	
+	<div class="spinner"></div>
+	</div>
+
+
+
 
 	<!-- チャレンジ 2-2 モーダルウィンドウをつけよう -->
 
